--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
         .main-hub { flex-grow: 1; display: flex; justify-content: center; align-items: center; padding: 20px; z-index: 10; }
         .container { background: rgba(10, 25, 41, 0.8); border: 2px solid var(--neon); box-shadow: 0 0 30px rgba(0, 242, 255, 0.3); padding: 25px; border-radius: 20px; width: 450px; backdrop-filter: blur(12px); }
         #chat-box { height: 400px; overflow-y: auto; margin-bottom: 15px; padding-right: 10px; scrollbar-width: thin; scrollbar-color: var(--neon) transparent; }
-        .msg { margin-bottom: 12px; padding: 10px; background: rgba(0, 242, 255, 0.05); border-left: 3px solid var(--pink); border-radius: 0 10px 10px 0; animation: slideIn 0.3s ease; }
-        @keyframes slideIn { from { opacity: 0; transform: translateX(-10px); } to { opacity: 1; transform: translateX(0); } }
+        .msg { margin-bottom: 12px; padding: 10px; background: rgba(0, 242, 255, 0.05); border-left: 3px solid var(--pink); border-radius: 0 10px 10px 0; }
         .msg-author { font-size: 0.75em; color: var(--pink); font-weight: bold; }
         .msg-text { color: #fff; margin-top: 4px; word-wrap: break-word; }
         .todo-section { margin-top: 20px; }
         .todo-item { background: rgba(255, 255, 255, 0.05); padding: 8px; margin: 5px 0; border-radius: 4px; display: flex; justify-content: space-between; font-size: 0.9em; border-left: 2px solid var(--neon); }
         input { width: calc(100% - 24px); background: rgba(0, 0, 0, 0.6); border: 1px solid var(--neon); color: #fff; padding: 12px; margin-bottom: 10px; border-radius: 8px; outline: none; }
-        button { width: 100%; padding: 12px; background: var(--neon); color: #000; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; text-transform: uppercase; transition: 0.3s; }
+        button { width: 100%; padding: 12px; background: var(--neon); color: #000; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; text-transform: uppercase; }
         button:hover { background: var(--pink); color: #fff; box-shadow: 0 0 15px var(--pink); }
         .hidden { display: none; }
-        .secondary-btn { background: transparent; color: var(--neon); border: 1px solid var(--neon); margin-top: 10px; }
     </style>
 </head>
 <body>
@@ -38,19 +36,17 @@
         </div>
     </div>
     <div style="margin-top: auto; font-size: 0.8em; opacity: 0.7;">
-        SYSTEM: ONLINE<br>
-        OXYGEN: 98%<br>
-        COORDINATES: 42.000, -1.337
+        SYSTEM: ONLINE | OXYGEN: 98%
     </div>
 </div>
 <div class="main-hub">
     <div class="container">
         <div id="auth-screen">
-            <h2 style="text-align: center; letter-spacing: 3px;">GATEWAY ACCESS</h2>
+            <h2 style="text-align: center;">GATEWAY ACCESS</h2>
             <input type="email" id="email" placeholder="Email">
             <input type="password" id="password" placeholder="Pass (min 6)">
             <button onclick="handleSignIn()">ENTER</button>
-            <button onclick="handleSignUp()" class="secondary-btn">REGISTER</button>
+            <button onclick="handleSignUp()" style="background:transparent; color:var(--neon); border:1px solid; margin-top:10px;">REGISTER</button>
         </div>
         <div id="chat-screen" class="hidden">
             <div id="chat-box"></div>
@@ -61,20 +57,20 @@
     </div>
 </div>
 <script>
-    const FINAL_URL = 'https://ebjsxlympwocluxgmwcu.supabase.co';
-    const FINAL_KEY = 'sb_publishable_8HhPj3Y8g5V7Np8Vy5xbzQ_2B7LjTkj';
-    const client = window.supabase.createClient(FINAL_URL, FINAL_KEY);
+    const G_URL = 'https://ebjsxlympwocluxgmwcu.supabase.co';
+    const G_KEY = 'sb_publishable_8HhPj3Y8g5V7Np8Vy5xbzQ_2B7LjTkj';
+    const galacticClient = window.supabase.createClient(G_URL, G_KEY);
 
     const authScreen = document.getElementById('auth-screen');
     const chatScreen = document.getElementById('chat-screen');
     const chatBox = document.getElementById('chat-box');
 
-    client.auth.onAuthStateChange((event, session) => {
+    galacticClient.auth.onAuthStateChange((event, session) => {
         if (session) {
             authScreen.classList.add('hidden');
             chatScreen.classList.remove('hidden');
             loadMessages();
-            subscribeToMessages();
+            subscribe();
         } else {
             authScreen.classList.remove('hidden');
             chatScreen.classList.add('hidden');
@@ -84,52 +80,46 @@
     async function handleSignUp() {
         const e = document.getElementById('email').value;
         const p = document.getElementById('password').value;
-        const { error } = await client.auth.signUp({ email: e, password: p });
-        if (error) alert(error.message); else alert("Success!");
+        const { error } = await galacticClient.auth.signUp({ email: e, password: p });
+        if (error) alert(error.message); else alert("Check Email!");
     }
 
     async function handleSignIn() {
         const e = document.getElementById('email').value;
         const p = document.getElementById('password').value;
-        const { error } = await client.auth.signInWithPassword({ email: e, password: p });
+        const { error } = await galacticClient.auth.signInWithPassword({ email: e, password: p });
         if (error) alert(error.message);
     }
 
-    async function handleSignOut() { await client.auth.signOut(); }
+    async function handleSignOut() { await galacticClient.auth.signOut(); }
 
     async function loadMessages() {
-        const { data } = await client.from('comments').select('*').order('created_at', { ascending: true });
+        const { data } = await galacticClient.from('comments').select('*').order('created_at', { ascending: true });
         chatBox.innerHTML = '';
-        if(data) data.forEach(renderMessage);
-        scrollToBottom();
+        if(data) data.forEach(render);
+        chatBox.scrollTop = chatBox.scrollHeight;
     }
 
-    function renderMessage(msg) {
+    function render(msg) {
         const div = document.createElement('div');
         div.className = 'msg';
-        const time = new Date(msg.created_at).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-        div.innerHTML = `<span style="float:right; font-size:0.6em; opacity:0.5;">${time}</span>
-                         <span class="msg-author">🚀 ${msg.nickname || 'Pilot'}</span>
-                         <div class="msg-text">${msg.message}</div>`;
+        div.innerHTML = `<span class="msg-author">🚀 ${msg.nickname || 'Pilot'}</span><div class="msg-text">${msg.message}</div>`;
         chatBox.appendChild(div);
-        scrollToBottom();
+        chatBox.scrollTop = chatBox.scrollHeight;
     }
 
     async function sendMessage() {
         const input = document.getElementById('msg-input');
-        const { data: { user } } = await client.auth.getUser();
+        const { data: { user } } = await galacticClient.auth.getUser();
         if (input.value.trim() && user) {
-            await client.from('comments').insert([{ message: input.value, nickname: user.email.split('@')[0] }]);
+            await galacticClient.from('comments').insert([{ message: input.value, nickname: user.email.split('@')[0] }]);
             input.value = '';
         }
     }
 
-    function subscribeToMessages() {
-        client.channel('chat').on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'comments' }, p => renderMessage(p.new)).subscribe();
+    function subscribe() {
+        galacticClient.channel('chat').on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'comments' }, p => render(p.new)).subscribe();
     }
-
-    function scrollToBottom() { chatBox.scrollTop = chatBox.scrollHeight; }
-    document.getElementById('msg-input').addEventListener('keypress', (e) => { if (e.key === 'Enter') sendMessage(); });
 
     const canvas = document.getElementById('canvas-bg');
     const ctx = canvas.getContext('2d');
@@ -140,33 +130,32 @@
     window.onresize = resize; resize();
 
     for(let i=0; i<1000; i++) {
-        stars.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, r: Math.random() < 0.05 ? Math.random()*3 + 1.5 : Math.random()*0.8, o: Math.random(), s: Math.random()*0.012 });
+        stars.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, r: Math.random()*1.5, o: Math.random(), s: Math.random()*0.01 });
     }
     for(let i=0; i<10; i++) {
-        asteroids.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, r: Math.random()*2 + 1, vx: Math.random()*0.4 - 0.2, vy: Math.random()*0.8 + 0.4 });
+        asteroids.push({ x: Math.random()*canvas.width, y: Math.random()*canvas.height, r: Math.random()*2+1, vx: Math.random()-0.5, vy: Math.random()+0.5 });
     }
-    planets.push({ x: canvas.width*0.85, y: canvas.height*0.2, r: 85, col: '#ff3366' });
-    planets.push({ x: canvas.width*0.15, y: canvas.height*0.75, r: 65, col: '#4422ff' });
+    planets.push({ x: canvas.width*0.8, y: canvas.height*0.2, r: 80, col: '#ff3366' });
+    planets.push({ x: canvas.width*0.2, y: canvas.height*0.7, r: 60, col: '#4422ff' });
 
     function draw() {
         ctx.fillStyle = '#050505'; ctx.fillRect(0,0,canvas.width, canvas.height);
         stars.forEach(s => {
             s.o += s.s; if(s.o > 1 || s.o < 0) s.s *= -1;
-            ctx.beginPath(); ctx.fillStyle = `rgba(255, 255, 255, ${s.o})`; ctx.arc(s.x, s.y, s.r, 0, Math.PI*2); ctx.fill();
+            ctx.beginPath(); ctx.fillStyle = `rgba(255,255,255,${s.o})`; ctx.arc(s.x, s.y, s.r, 0, Math.PI*2); ctx.fill();
         });
         planets.forEach(p => {
-            let grad = ctx.createRadialGradient(p.x, p.y, p.r*0.1, p.x, p.y, p.r);
-            grad.addColorStop(0, p.col); grad.addColorStop(1, '#000');
-            ctx.fillStyle = grad; ctx.beginPath(); ctx.arc(p.x, p.y, p.r, 0, Math.PI*2); ctx.fill();
+            let g = ctx.createRadialGradient(p.x, p.y, p.r*0.1, p.x, p.y, p.r);
+            g.addColorStop(0, p.col); g.addColorStop(1, '#000');
+            ctx.fillStyle = g; ctx.beginPath(); ctx.arc(p.x, p.y, p.r, 0, Math.PI*2); ctx.fill();
         });
         ctx.fillStyle = "#999";
         asteroids.forEach(a => {
             a.x += a.vx; a.y += a.vy; if(a.y > canvas.height) a.y = -20;
             ctx.beginPath(); ctx.arc(a.x, a.y, a.r, 0, Math.PI*2); ctx.fill();
         });
-        ufo.x += ufo.speed; if(ufo.x > canvas.width + 300) ufo.x = -300;
-        ctx.fillStyle = "#ff00ff"; ctx.fillRect(ufo.x, ufo.y, 30, 7);
-        ctx.beginPath(); ctx.arc(ufo.x+15, ufo.y-5, 7, 0, Math.PI*2); ctx.fill();
+        ufo.x += ufo.speed; if(ufo.x > canvas.width + 200) ufo.x = -200;
+        ctx.fillStyle = "#ff00ff"; ctx.fillRect(ufo.x, ufo.y, 30, 8);
         requestAnimationFrame(draw);
     }
     draw();
